@@ -1,3 +1,8 @@
+2007-01-10 Konstantin Triger <kostat@mainsoft.com>
+
+	* ObjectDataSourceView.cs: use case unsensitive comparer for
+	 	parameters collection.
+
 2007-01-10 Igor Zelmanovich <igorz@mainsoft.com>
 
 	* LoginStatus.cs: fixed: not causes page validation.
